# Cesar-from-first-principles

./: .gitignore  .project  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  CargaParcial.ced  CargaParcial.map  CargaParcial.mem  Makefile  cesar  cesar.cbp  cmake_install.cmake  compile_commands.json  run_tests  test.ced  test.map
.clangd/index/: alu.cpp.4A5DCD74A4AB7C85.idx  cesar_0.xpm.8914809423186D99.idx  cesar_1.xpm.A58873FE74ED3BC4.idx  cesar_2.xpm.EBE50A3967585ACC.idx  cesar_3.xpm.5C3577956BAE2971.idx  cesar_4.xpm.812963FAA4C968FA.idx  cesar_5.xpm.A0DEE110F05A8C76.idx  cesar_6.xpm.E2D34ADDFAA1092F.idx  cesar_7.xpm.8DBC1B4DB5803D7C.idx  cesar_8.xpm.975F1F5C29E1E10F.idx  cesar_9.xpm.B20402A70CAA039E.idx  cesar_a.xpm.E5A14EF5C5382CAA.idx  cesar_b.xpm.5465EE08525F5499.idx  cesar_c.xpm.89EA0723922439A0.idx  cesar_d.xpm.6D2A3E42A73891B5.idx  cesar_e.xpm.6C0E26075BDC966D.idx  cesar_f.xpm.F279471556776064.idx  cesar_null.xpm.A83B5BDF069612F7.idx  character_00.xpm.0D4F91428B9C8414.idx  character_01.xpm.B17A137968C6D977.idx  character_02.xpm.062BE838A2213A31.idx  character_03.xpm.AE0A6C1F1F7BBA07.idx  character_04.xpm.D28B4C4948F8D3C6.idx  character_05.xpm.91C7798F470E800F.idx  character_06.xpm.30085198B2035DD3.idx  character_07.xpm.91CD185602FAF13D.idx  character_08.xpm.4575AA7975766066.idx  character_09.xpm.8D0322C8EFA0F9C2.idx  character_10.xpm.4637DD7B0969731F.idx  character_11.xpm.49D7A0603555839C.idx  character_12.xpm.DB27881B778C97CF.idx  character_13.xpm.E4363A05AA087BF2.idx  character_14.xpm.3A651BFFC66CEF2C.idx  character_15.xpm.FBAAF9F39EFE3E21.idx  character_16.xpm.6180CA584C5E8D53.idx  character_17.xpm.CEFA00F3D5348898.idx  character_18.xpm.CFD8E14502AB4700.idx  character_19.xpm.6005EF31433FC95B.idx  character_20.xpm.6015BEE2D9FB7042.idx  character_21.xpm.33670E3B2CBE2531.idx  (+117 more)
source/: alu.cpp  constants.h  cpu.cpp  hardware.h  main.cpp  test.cpp  test.h  util.h
source/gui/: buttons.cpp  buttons.h  gui.h  main_window.cpp  main_window.h  panels.cpp  panels.h  side_window.cpp  side_windows.cpp  side_windows.h  tables.cpp  tables.h  text_display.cpp  text_display.h  utils.cpp  utils.h  windows.cpp  windows.h
source/gui/images/: cesar_0.xpm  cesar_1.xpm  cesar_2.xpm  cesar_3.xpm  cesar_4.xpm  cesar_5.xpm  cesar_6.xpm  cesar_7.xpm  cesar_8.xpm  cesar_9.xpm  cesar_a.xpm  cesar_b.xpm  cesar_c.xpm  cesar_d.xpm  cesar_e.xpm  cesar_f.xpm  cesar_null.xpm  character_00.xpm  character_01.xpm  character_02.xpm  character_03.xpm  character_04.xpm  character_05.xpm  character_06.xpm  character_07.xpm  character_08.xpm  character_09.xpm  character_10.xpm  character_11.xpm  character_12.xpm  character_13.xpm  character_14.xpm  character_15.xpm  character_16.xpm  character_17.xpm  character_18.xpm  character_19.xpm  character_20.xpm  character_21.xpm  character_22.xpm  (+83 more)
source/gui/panels/: panels.cpp  panels.h
source/hardware/: alu.cpp  constants.h  cpu.cpp  hardware.h
