cmake_minimum_required(VERSION 3.7)
project(cesar)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
find_package(wxWidgets COMPONENTS all REQUIRED)
include(${wxWidgets_USE_FILE})
file(GLOB SOURCE_FILES "source/*.cpp" "source/*.h" )
list(REMOVE_ITEM SOURCE_FILES "source/main.cpp")
add_executable(cesar "source/main.cpp" ${SOURCE_FILES})
target_link_libraries(cesar ${wxWidgets_LIBRARIES})
target_compile_options(cesar PRIVATE -Werror -Wall -Wextra)
