cmake_minimum_required(VERSION 3.7)
project(cesar)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

file(GLOB SOURCE_FILES "source/*.h" "source/*.cpp")
find_package(wxWidgets COMPONENTS all REQUIRED)
include(GoogleTest)
if (wxWidgets_FOUND)
    include(${wxWidgets_USE_FILE})
    add_executable(cesar "source/main.cpp" ${SOURCE_FILES})
    target_link_libraries(cesar ${wxWidgets_LIBRARIES})
    target_link_libraries(cesar ${gtest_LIBRARIES})
    target_compile_options(cesar PRIVATE -g -Werror -Wall -Wextra)
endif()
